--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "parse-server",
+  "name": "appyvet-parse-server",
   "version": "4.3.0",
-  "description": "An express module providing a Parse-compatible API server",
+  "description": "A fork of Parse-compatible API server",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/parse-community/parse-server"
   },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "files": [
     "bin/",
     "lib/",
