--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "appyvet-parse-server",
+  "name": "@appyvet/parse-server",
   "version": "4.3.0",
   "description": "A fork of Parse-compatible API server",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/parse-community/parse-server"
+    "url": "https://github.com/appyvet/parse-server"
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "files": [
     "bin/",
     "lib/",
